--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "jnmorse Personal Eslint Configuration",
   "main": "index.js",
   "peerDependencies": {
-    "eslint": ">= 4",
-    "eslint-plugin-react": ">= 7",
-    "eslint-plugin-import": ">= 2"
+    "eslint": ">= 4"
   },
   "scripts": {
     "lint": "eslint .",
@@ -32,13 +30,13 @@
   },
   "homepage": "https://github.com/jnmorse/eslint-config-jnmorse#readme",
   "dependencies": {
-    "eslint-restricted-globals": "^0.1.1"
-  },
-  "devDependencies": {
-    "eslint": "^4.7.2",
-    "eslint-find-rules": "^3.1.1",
+    "eslint-restricted-globals": "^0.1.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.7.2",
+    "eslint-find-rules": "^3.1.1"
   }
 }
