--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "scripts": {
     "lint": "eslint .",
+    "current": "eslint-rule-finder --current",
     "unused": "eslint-rule-finder --unused",
     "lint-fix": "eslint . --fix",
-    "preversion": "npm run --silent lint && npm run --silent unused",
+    "preversion": "npm run test",
     "postversion": "git push && git push --tags",
-    "test": "npm run lint"
+    "test": "npm run lint && npm run --silent unused"
   },
   "repository": {
     "type": "git",
@@ -30,14 +31,14 @@
   },
   "homepage": "https://github.com/jnmorse/eslint-config-jnmorse#readme",
   "dependencies": {
-    "eslint-restricted-globals": "^0.1.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-restricted-globals": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^4.7.2",
+    "eslint": "^4.10.0",
     "eslint-find-rules": "^3.1.1",
-    "eslint-rule-finder": "^1.0.1"
+    "eslint-rule-finder": "^1.0.8"
   }
 }
