--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "current": "eslint-rule-finder --current",
     "unused": "eslint-rule-finder --unused",
     "lint-fix": "eslint . --fix",
-    "preversion": "npm run test",
+    "preversion": "npm run lint && npm run test",
     "postversion": "git push && git push --tags",
-    "test": "npm run lint && npm run --silent unused"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -37,8 +37,9 @@
     "eslint-restricted-globals": "^0.1.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.10.0",
-    "eslint-find-rules": "^3.1.1",
-    "eslint-rule-finder": "^1.0.8"
+    "eslint-rule-finder": "^1.1.0",
+    "mocha": "^4.0.1"
   }
 }
