--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint .",
     "current": "eslint-rule-finder --current",
     "unused": "eslint-rule-finder --unused",
+    "prerelease": "npm run lint && npm run test",
+    "release": "standard-version --sign",
     "lint-fix": "eslint . --fix",
     "preversion": "npm run lint && npm run test",
     "postversion": "git push && git push --tags",
@@ -40,6 +42,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-rule-finder": "^1.1.0",
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "standard-version": "^5.0.2"
   }
 }
