--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-restricted-globals": "^0.2.0"
   },
   "devDependencies": {
