--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint-fix": "eslint . --fix",
     "preversion": "npm run lint && npm run test",
     "postversion": "git push && git push --tags",
-    "test": "mocha"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -41,10 +41,9 @@
     "eslint-restricted-globals": "^0.2.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-rule-finder": "^1.2.1",
-    "mocha": "^6.1.3",
+    "jest": "^24.8.0",
     "standard-version": "^5.0.2"
   }
 }
