--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
   "homepage": "https://github.com/jnmorse/eslint-config-jnmorse#readme",
   "dependencies": {
     "babel-eslint": "^10.0.1",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "eslint-restricted-globals": "^0.2.0"
+    "eslint-restricted-globals": "^0.2.0",
+    "prettier": "^1.17.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
