--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "jnmorse Personal Eslint Configuration",
   "main": "index.js",
   "peerDependencies": {
-    "eslint": ">= 4"
+    "eslint": ">= 5.16.0",
+    "eslint-plugin-prettier": ">=4.3.0"
   },
   "scripts": {
     "lint": "eslint .",
@@ -13,6 +14,7 @@
     "prerelease": "npm run lint && npm run test",
     "release": "standard-version --sign",
     "postrelease": "git push && git push --tags",
+    "postinstall": "cp .prettierrc $INIT_CWD",
     "lint-fix": "eslint . --fix",
     "preversion": "npm run lint && npm run test",
     "postversion": "git push && git push --tags",
