--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "jnmorse Personal Eslint Configuration",
   "main": "index.js",
   "peerDependencies": {
-    "eslint": ">= 5.16.0",
-    "eslint-plugin-prettier": ">=4.3.0"
+    "eslint": ">= 5.16.0"
   },
   "scripts": {
     "lint": "eslint .",
