--- a/package.json
+++ b/package.json
@@ -2,39 +2,37 @@
   "name": "eslint-config-jnmorse",
   "version": "2.4.0",
   "description": "jnmorse Personal Eslint Configuration",
-  "main": "index.js",
-  "peerDependencies": {
-    "eslint": ">= 5.16.0"
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "current": "eslint-rule-finder --current",
-    "unused": "eslint-rule-finder --unused",
-    "prerelease": "npm run lint && npm run test",
-    "release": "standard-version --sign",
-    "postrelease": "git push && git push --tags",
-    "postinstall": "node ./post-install.js",
-    "lint-fix": "eslint . --fix",
-    "preversion": "npm run lint && npm run test",
-    "postversion": "git push && git push --tags",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+  "keywords": [
+    "config",
+    "eslint",
+    "javascript"
+  ],
+  "homepage": "https://github.com/jnmorse/eslint-config-jnmorse#readme",
+  "bugs": {
+    "url": "https://github.com/jnmorse/eslint-config-jnmorse/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jnmorse/eslint-config-jnmorse.git"
   },
-  "keywords": [
-    "eslint",
-    "config",
-    "javascript"
-  ],
-  "author": "Joseph Morse <tamed.lionheart@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jnmorse/eslint-config-jnmorse/issues"
+  "author": {
+    "name": "Joseph Morse",
+    "email": "tamed.lionheart@gmail.com",
+    "url": "https://github.com/jnmorse"
   },
-  "homepage": "https://github.com/jnmorse/eslint-config-jnmorse#readme",
+  "main": "index.js",
+  "scripts": {
+    "current": "eslint-rule-finder --current",
+    "postinstall": "node ./post-install.js",
+    "lint": "eslint .",
+    "prerelease": "npm run lint && npm run test",
+    "release": "standard-version --sign",
+    "postrelease": "git push && git push --tags",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "unused": "eslint-rule-finder --unused"
+  },
   "dependencies": {
     "babel-eslint": "^10.0.1",
     "eslint-config-prettier": "^4.3.0",
@@ -52,5 +50,8 @@
     "eslint-rule-finder": "^1.2.2",
     "jest": "^24.8.0",
     "standard-version": "^6.0.1"
+  },
+  "peerDependencies": {
+    "eslint": ">= 5.16.0"
   }
 }
