--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "eslint-config-jnmorse",
   "version": "2.6.1",
   "description": "jnmorse Personal Eslint Configuration",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/jnmorse"
+  },
   "keywords": [
     "config",
     "eslint",
