--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-jnmorse",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "jnmorse Personal Eslint Configuration",
   "keywords": [
     "config",
@@ -26,7 +26,7 @@
     "current": "eslint-rule-finder --current",
     "lint": "eslint .",
     "prerelease": "npm run lint && npm run test",
-    "release": "standard-version --sign",
+    "release": "standard-version",
     "postrelease": "git push && git push --tags",
     "test": "jest",
     "test:watch": "jest --watchAll",
